# rust_opengl

./: Cargo.toml  LICENSE  README.md
assets/: 3.3.shader.fs  3.3.shader.vs
src/: camera.rs  main.rs  sandbox.rs  shader.rs  utils.rs  vertex_shapes.rs
