[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["Jacksom Soares <jacksom.es.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "^0.34"
gl = "^0.14.0"
image = "^0.23.5"
nalgebra-glm = "^0.7.0"